WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163004
CachedResourceRequest should not need to store defer and preload options
https://bugs.webkit.org/show_bug.cgi?id=163004
Summary
CachedResourceRequest should not need to store defer and preload options
youenn fablet
Reported
2016-10-06 03:12:38 PDT
This should be handled by CachedResourceLoader internally.
Attachments
Patch
(17.05 KB, patch)
2016-10-06 03:16 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2016-10-06 03:16:58 PDT
Created
attachment 290806
[details]
Patch
Alex Christensen
Comment 2
2016-10-06 08:59:26 PDT
Comment on
attachment 290806
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=290806&action=review
> Source/WebCore/loader/cache/CachedResourceLoader.cpp:192 > + auto defer = clientDefersImage(request.resourceRequest().url()) ? DeferOption::DeferredByClient : DeferOption::NoDefer;
I think this auto should be bool.
youenn fablet
Comment 3
2016-10-06 22:39:59 PDT
Thanks for the review.
> > Source/WebCore/loader/cache/CachedResourceLoader.cpp:192 > > + auto defer = clientDefersImage(request.resourceRequest().url()) ? DeferOption::DeferredByClient : DeferOption::NoDefer; > > I think this auto should be bool.
defer is of type enum class DeferOption.
WebKit Commit Bot
Comment 4
2016-10-06 23:02:41 PDT
Comment on
attachment 290806
[details]
Patch Clearing flags on attachment: 290806 Committed
r206900
: <
http://trac.webkit.org/changeset/206900
>
WebKit Commit Bot
Comment 5
2016-10-06 23:02:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug